Combine env, secrets, labels, and quadlet options in vars file, removing logic from tasks files
Signed-off-by: Jared Hocutt <jaredhocutt@gmail.com>

--- a/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/tasks/main.yml
@@ -91,13 +91,8 @@
     name: "{{ archiveium_name }}-postgres"
     image: "{{ archiveium_postgres_image }}:{{ archiveium_postgres_image_tag }}"
     network: "{{ archiveium_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(archiveium_postgres_env_vars_base, recursive=True)
-      | combine(archiveium_postgres_env_vars, recursive=True) }}
-    secrets: >-
-      {{ archiveium_postgres_container_secrets_base
-      + archiveium_postgres_container_secrets }}
+    env: "{{ archiveium_postgres_container_env_combined }}"
+    secrets: "{{ archiveium_postgres_container_secrets_combined }}"
     volumes:
       - "{{ archiveium_postgres_volume_data }}.volume:/var/lib/postgresql/data"
     healthcheck_interval: 30s
@@ -105,9 +100,9 @@
     healthcheck_start_period: 20s
     healthcheck_timeout: 5s
     healthcheck: CMD-SHELL pg_isready -d {{ archiveium_postgres_db_name }} -U {{ archiveium_postgres_user }}
-    labels: "{{ archiveium_postgres_container_labels_base | combine(archiveium_postgres_container_labels, recursive=True) }}"
+    labels: "{{ archiveium_postgres_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ archiveium_postgres_quadlet_options_base + archiveium_postgres_quadlet_options }}"
+    quadlet_options: "{{ archiveium_postgres_quadlet_options_combined }}"
     state: quadlet
   notify: Restart postgres for {{ archiveium_name }}
   become: true
@@ -117,13 +112,8 @@
     name: "{{ archiveium_name }}-minio"
     image: "{{ archiveium_minio_image }}:{{ archiveium_minio_image_tag }}"
     network: "{{ archiveium_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(archiveium_minio_env_vars_base, recursive=True)
-      | combine(archiveium_minio_env_vars, recursive=True) }}
-    secrets: >-
-      {{ archiveium_minio_container_secrets_base
-      + archiveium_minio_container_secrets }}
+    env: "{{ archiveium_minio_container_env_combined }}"
+    secrets: "{{ archiveium_minio_container_secrets_combined }}"
     volumes:
       - "{{ archiveium_minio_volume_data }}.volume:/data"
     healthcheck_interval: 30s
@@ -133,9 +123,9 @@
     healthcheck: CMD mc ready local
     entrypoint: sh
     command: -c 'mkdir -p /data/minio/emails && minio server /data/minio'
-    labels: "{{ archiveium_minio_container_labels_base | combine(archiveium_minio_container_labels, recursive=True) }}"
+    labels: "{{ archiveium_minio_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ archiveium_minio_quadlet_options_base + archiveium_minio_quadlet_options }}"
+    quadlet_options: "{{ archiveium_minio_quadlet_options_combined }}"
     state: quadlet
   notify: Restart minio for {{ archiveium_name }}
   become: true
@@ -145,13 +135,8 @@
     name: "{{ archiveium_name }}-redis"
     image: "{{ archiveium_redis_image }}:{{ archiveium_redis_image_tag }}"
     network: "{{ archiveium_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(archiveium_redis_env_vars_base, recursive=True)
-      | combine(archiveium_redis_env_vars, recursive=True) }}
-    secrets: >-
-      {{ archiveium_redis_container_secrets_base
-      + archiveium_redis_container_secrets }}
+    env: "{{ archiveium_redis_container_env_combined }}"
+    secrets: "{{ archiveium_redis_container_secrets_combined }}"
     volumes:
       - "{{ archiveium_redis_volume_data }}.volume:/data"
     healthcheck_interval: 30s
@@ -160,9 +145,9 @@
     healthcheck_timeout: 3s
     healthcheck: CMD-SHELL redis-cli ping | grep PONG
     command: redis-server --maxmemory-policy noeviction --appendonly yes --maxmemory 200M
-    labels: "{{ archiveium_redis_container_labels_base | combine(archiveium_redis_container_labels, recursive=True) }}"
+    labels: "{{ archiveium_redis_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ archiveium_redis_quadlet_options_base + archiveium_redis_quadlet_options }}"
+    quadlet_options: "{{ archiveium_redis_quadlet_options_combined }}"
     state: quadlet
   notify: Restart redis for {{ archiveium_name }}
   become: true
@@ -174,19 +159,14 @@
     network:
       - "{{ archiveium_name }}.network"
       - "{{ archiveium_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
-    env: >-
-      {{ common_env_vars_base
-      | combine(archiveium_meilisearch_env_vars_base, recursive=True)
-      | combine(archiveium_meilisearch_env_vars, recursive=True) }}
-    secrets: >-
-      {{ archiveium_meilisearch_container_secrets_base
-      + archiveium_meilisearch_container_secrets }}
+    env: "{{ archiveium_meilisearch_container_env_combined }}"
+    secrets: "{{ archiveium_meilisearch_container_secrets_combined }}"
     volumes:
       - "{{ archiveium_meilisearch_volume_data }}.volume:/meili_data"
     publish: "{{ archiveium_traefik_enable | ternary(omit, archiveium_meilisearch_ports) }}"
-    labels: "{{ archiveium_meilisearch_container_labels_base | combine(archiveium_meilisearch_container_labels, recursive=True) }}"
+    labels: "{{ archiveium_meilisearch_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ archiveium_meilisearch_quadlet_options_base + archiveium_meilisearch_quadlet_options }}"
+    quadlet_options: "{{ archiveium_meilisearch_quadlet_options_combined }}"
     state: quadlet
   notify: Restart meilisearch for {{ archiveium_name }}
   become: true
@@ -196,13 +176,8 @@
     name: "{{ archiveium_name }}-cron"
     image: "{{ archiveium_image }}:{{ archiveium_image_tag }}"
     network: "{{ archiveium_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(archiveium_cron_env_vars_base, recursive=True)
-      | combine(archiveium_cron_env_vars, recursive=True) }}
-    secrets: >-
-      {{ archiveium_cron_container_secrets_base
-      + archiveium_cron_container_secrets }}
+    env: "{{ archiveium_cron_container_env_combined }}"
+    secrets: "{{ archiveium_cron_container_secrets_combined }}"
     volumes:
       - "{{ archiveium_volume_config }}.volume:/app/config"
     healthcheck_interval: 30s
@@ -210,9 +185,9 @@
     healthcheck_start_period: 20s
     healthcheck_timeout: 5s
     healthcheck: CMD curl -f http://localhost:3000/login
-    labels: "{{ archiveium_cron_container_labels_base | combine(archiveium_cron_container_labels, recursive=True) }}"
+    labels: "{{ archiveium_cron_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ archiveium_cron_quadlet_options_base + archiveium_cron_quadlet_options }}"
+    quadlet_options: "{{ archiveium_cron_quadlet_options_combined }}"
     state: quadlet
   notify: Restart cron for {{ archiveium_name }}
   become: true
@@ -224,13 +199,8 @@
     network:
       - "{{ archiveium_name }}.network"
       - "{{ archiveium_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
-    env: >-
-      {{ common_env_vars_base
-      | combine(archiveium_env_vars_base, recursive=True)
-      | combine(archiveium_env_vars, recursive=True) }}
-    secrets: >-
-      {{ archiveium_container_secrets_base
-      + archiveium_container_secrets }}
+    env: "{{ archiveium_container_env_combined }}"
+    secrets: "{{ archiveium_container_secrets_combined }}"
     volumes:
       - "{{ archiveium_volume_config }}.volume:/app/config"
     healthcheck_interval: 30s
@@ -239,9 +209,9 @@
     healthcheck_timeout: 5s
     healthcheck: CMD curl -f http://localhost:3000/login
     publish: "{{ archiveium_traefik_enable | ternary(omit, archiveium_ports) }}"
-    labels: "{{ archiveium_container_labels_base | combine(archiveium_container_labels, recursive=True) }}"
+    labels: "{{ archiveium_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ archiveium_quadlet_options_base + archiveium_quadlet_options }}"
+    quadlet_options: "{{ archiveium_quadlet_options_combined }}"
     state: quadlet
   notify: Restart {{ archiveium_name }}
   become: true
