--- a/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/defaults/main.yml
@@ -17,7 +17,7 @@ calibre_ports:
 
 calibre_secrets: {}
 
-calibre_env_vars: {}
+calibre_container_env: {}
 calibre_container_secrets: []
 calibre_container_labels: {}
 calibre_quadlet_options: []
