--- a/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/vars/main.yml
@@ -2,17 +2,26 @@
 # vars file for jaredhocutt.homelab.changedetection
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-changedetection_env_vars_base:
+changedetection_container_env_base:
   PLAYWRIGHT_DRIVER_URL: "ws://{{ changedetection_name }}-browser:3000"
 
-changedetection_browser_env_vars_base:
+changedetection_browser_container_env_base:
   SCREEN_WIDTH: "1920"
   SCREEN_HEIGHT: "1024"
   SCREEN_DEPTH: "16"
   MAX_CONCURRENT_CHROME_PROCESSES: "10"
+
+changedetection_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(changedetection_container_env_base, recursive=True)
+  | combine(changedetection_container_env, recursive=True) }}
+changedetection_browser_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(changedetection_browser_container_env_base, recursive=True)
+  | combine(changedetection_browser_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -27,6 +36,13 @@ changedetection_secrets_combined: >-
 changedetection_container_secrets_base: []
 
 changedetection_browser_container_secrets_base: []
+
+changedetection_container_secrets_combined: >-
+  {{ changedetection_container_secrets_base
+  + changedetection_container_secrets }}
+changedetection_browser_container_secrets_combined: >-
+  {{ changedetection_browser_container_secrets_base
+  + changedetection_browser_container_secrets }}
 
 ###############################################################################
 # Container Labels
@@ -48,6 +64,13 @@ changedetection_container_labels_base: "{{ changedetection_traefik_enable | tern
 
 changedetection_browser_container_labels_base: {}
 
+changedetection_container_labels_combined: >-
+  {{ changedetection_container_labels_base
+  | combine(changedetection_container_labels, recursive=True) }}
+changedetection_browser_container_labels_combined: >-
+  {{ changedetection_browser_container_labels_base
+  | combine(changedetection_browser_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
@@ -60,3 +83,10 @@ changedetection_quadlet_options_base_custom:
 changedetection_quadlet_options_base: "{{ common_quadlet_options_base + changedetection_quadlet_options_base_custom }}"
 
 changedetection_browser_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+changedetection_quadlet_options_combined: >-
+  {{ changedetection_quadlet_options_base
+  + changedetection_quadlet_options }}
+changedetection_browser_quadlet_options_combined: >-
+  {{ changedetection_browser_quadlet_options_base
+  + changedetection_browser_quadlet_options }}
