--- a/collections/ansible_collections/jaredhocutt/homelab/roles/healthchecks/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/healthchecks/defaults/main.yml
@@ -15,7 +15,7 @@ healthchecks_ports:
 
 healthchecks_secrets: {}
 
-healthchecks_env_vars: {}
+healthchecks_container_env: {}
 healthchecks_container_secrets: []
 healthchecks_container_labels: {}
 healthchecks_quadlet_options: []
