--- a/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/vars/main.yml
@@ -2,10 +2,15 @@
 # vars file for jaredhocutt.homelab.stirling_pdf
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-stirling_pdf_env_vars_base: {}
+stirling_pdf_container_env_base: {}
+
+stirling_pdf_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(stirling_pdf_container_env_base, recursive=True)
+  | combine(stirling_pdf_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -18,6 +23,10 @@ stirling_pdf_secrets_combined: >-
   | combine(stirling_pdf_secrets, recursive=True) }}
 
 stirling_pdf_container_secrets_base: []
+
+stirling_pdf_container_secrets_combined: >-
+  {{ stirling_pdf_container_secrets_base
+  + stirling_pdf_container_secrets }}
 
 ###############################################################################
 # Container Labels
@@ -33,8 +42,16 @@ stirling_pdf_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
 stirling_pdf_container_labels_base: "{{ stirling_pdf_traefik_enable | ternary((stirling_pdf_container_labels_traefik | items2dict), {}) }}"
 
+stirling_pdf_container_labels_combined: >-
+  {{ stirling_pdf_container_labels_base
+  | combine(stirling_pdf_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
 stirling_pdf_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+stirling_pdf_quadlet_options_combined: >-
+  {{ stirling_pdf_quadlet_options_base
+  + stirling_pdf_quadlet_options }}
