--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tandoor/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tandoor/defaults/main.yml
@@ -19,12 +19,12 @@ tandoor_ports:
 
 tandoor_secrets: {}
 
-tandoor_env_vars: {}
+tandoor_container_env: {}
 tandoor_container_secrets: []
 tandoor_container_labels: {}
 tandoor_quadlet_options: []
 
-tandoor_postgres_env_vars: {}
+tandoor_postgres_container_env: {}
 tandoor_postgres_container_secrets: []
 tandoor_postgres_container_labels: {}
 tandoor_postgres_quadlet_options: []
