--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tandoor/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tandoor/tasks/main.yml
@@ -49,13 +49,8 @@
     name: "{{ tandoor_name }}-postgres"
     image: "{{ tandoor_postgres_image }}:{{ tandoor_postgres_image_tag }}"
     network: "{{ tandoor_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(tandoor_postgres_env_vars_base, recursive=True)
-      | combine(tandoor_postgres_env_vars, recursive=True) }}
-    secrets: >-
-      {{ tandoor_postgres_container_secrets_base
-      + tandoor_postgres_container_secrets }}
+    env: "{{ tandoor_postgres_container_env_combined }}"
+    secrets: "{{ tandoor_postgres_container_secrets_combined }}"
     volumes:
       - "{{ tandoor_postgres_volume_data }}.volume:/var/lib/postgresql/data"
     healthcheck_interval: 30s
@@ -64,7 +59,7 @@
     healthcheck_timeout: 5s
     healthcheck: CMD-SHELL pg_isready -d {{ tandoor_postgres_db_name }} -U {{ tandoor_postgres_user }}
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ tandoor_postgres_quadlet_options_base + tandoor_postgres_quadlet_options }}"
+    quadlet_options: "{{ tandoor_postgres_quadlet_options_combined }}"
     state: quadlet
   notify: Restart postgres for {{ tandoor_name }}
   become: true
@@ -74,20 +69,15 @@
     name: "{{ tandoor_name }}"
     image: "{{ tandoor_image }}:{{ tandoor_image_tag }}"
     network: "{{ tandoor_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(tandoor_env_vars_base, recursive=True)
-      | combine(tandoor_env_vars, recursive=True) }}
-    secrets: >-
-      {{ tandoor_container_secrets_base
-      + tandoor_container_secrets }}
+    env: "{{ tandoor_container_env_combined }}"
+    secrets: "{{ tandoor_container_secrets_combined }}"
     volumes:
       - "{{ tandoor_volume_staticfiles }}.volume:/opt/recipes/staticfiles"
       - "{{ tandoor_volume_mediafiles }}.volume:/opt/recipes/mediafiles"
     publish: "{{ tandoor_traefik_enable | ternary(omit, tandoor_ports) }}"
-    labels: "{{ tandoor_container_labels_base | combine(tandoor_container_labels, recursive=True) }}"
+    labels: "{{ tandoor_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ tandoor_quadlet_options_base + tandoor_quadlet_options }}"
+    quadlet_options: "{{ tandoor_quadlet_options_combined }}"
     state: quadlet
   notify: Restart {{ tandoor_name }}
   become: true
