--- a/collections/ansible_collections/jaredhocutt/homelab/roles/traefik/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/traefik/vars/main.yml
@@ -21,10 +21,15 @@ traefik_command_base:
   - --accesslog=true
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-traefik_env_vars_base: {}
+traefik_container_env_base: {}
+
+traefik_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(traefik_container_env_base, recursive=True)
+  | combine(traefik_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -37,6 +42,10 @@ traefik_secrets_combined: >-
   | combine(traefik_secrets, recursive=True) }}
 
 traefik_container_secrets_base: []
+
+traefik_container_secrets_combined: >-
+  {{ traefik_container_secrets_base
+  + traefik_container_secrets }}
 
 ###############################################################################
 # Container Labels
@@ -54,8 +63,16 @@ traefik_container_labels_traefik:
     value: api@internal
 traefik_container_labels_base: "{{ traefik_traefik_enable | ternary((traefik_container_labels_traefik | items2dict), {}) }}"
 
+traefik_container_labels_combined: >-
+  {{ traefik_container_labels_base
+  | combine(traefik_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
 traefik_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+traefik_quadlet_options_combined: >-
+  {{ traefik_quadlet_options_base
+  + traefik_quadlet_options }}
