--- a/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/warracker/defaults/main.yml
@@ -18,12 +18,12 @@ warracker_ports:
 
 warracker_secrets: {}
 
-warracker_env_vars: {}
+warracker_container_env: {}
 warracker_container_secrets: []
 warracker_container_labels: {}
 warracker_quadlet_options: []
 
-warracker_postgres_env_vars: {}
+warracker_postgres_container_env: {}
 warracker_postgres_container_secrets: []
 warracker_postgres_container_labels: {}
 warracker_postgres_quadlet_options: []
