--- a/collections/ansible_collections/jaredhocutt/homelab/roles/audiobookshelf/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/audiobookshelf/vars/main.yml
@@ -2,10 +2,15 @@
 # vars file for jaredhocutt.homelab.audiobookshelf
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-audiobookshelf_env_vars_base: {}
+audiobookshelf_container_env_base: {}
+
+audiobookshelf_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(audiobookshelf_container_env_base, recursive=True)
+  | combine(audiobookshelf_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -18,6 +23,10 @@ audiobookshelf_secrets_combined: >-
   | combine(audiobookshelf_secrets, recursive=True) }}
 
 audiobookshelf_container_secrets_base: []
+
+audiobookshelf_container_secrets_combined: >-
+  {{ audiobookshelf_container_secrets_base
+  + audiobookshelf_container_secrets }}
 
 ###############################################################################
 # Container Labels
@@ -33,8 +42,16 @@ audiobookshelf_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
 audiobookshelf_container_labels_base: "{{ audiobookshelf_traefik_enable | ternary((audiobookshelf_container_labels_traefik | items2dict), {}) }}"
 
+audiobookshelf_container_labels_combined: >-
+  {{ audiobookshelf_container_labels_base
+  | combine(audiobookshelf_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
 audiobookshelf_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+audiobookshelf_quadlet_options_combined: >-
+  {{ audiobookshelf_quadlet_options_base
+  + audiobookshelf_quadlet_options }}
