--- a/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/tasks/main.yml
@@ -53,13 +53,8 @@
     name: "{{ authentik_name }}-postgres"
     image: "{{ authentik_postgres_image }}:{{ authentik_postgres_image_tag }}"
     network: "{{ authentik_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(authentik_postgres_env_vars_base, recursive=True)
-      | combine(authentik_postgres_env_vars, recursive=True) }}
-    secrets: >-
-      {{ authentik_postgres_container_secrets_base
-      + authentik_postgres_container_secrets }}
+    env: "{{ authentik_postgres_container_env_combined }}"
+    secrets: "{{ authentik_postgres_container_secrets_combined }}"
     volumes:
       - "{{ authentik_postgres_volume_data }}.volume:/var/lib/postgresql/data"
     healthcheck_interval: 30s
@@ -67,9 +62,9 @@
     healthcheck_start_period: 20s
     healthcheck_timeout: 5s
     healthcheck: CMD-SHELL pg_isready -d {{ authentik_postgres_db_name }} -U {{ authentik_postgres_user }}
-    labels: "{{ authentik_postgres_container_labels_base | combine(authentik_postgres_container_labels, recursive=True) }}"
+    labels: "{{ authentik_postgres_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ authentik_postgres_quadlet_options_base + authentik_postgres_quadlet_options }}"
+    quadlet_options: "{{ authentik_postgres_quadlet_options_combined }}"
     state: quadlet
   notify: Restart postgres for {{ authentik_name }}
   become: true
@@ -81,21 +76,16 @@
     network:
       - "{{ authentik_name }}.network"
       - "{{ authentik_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
-    env: >-
-      {{ common_env_vars_base
-      | combine(authentik_env_vars_base, recursive=True)
-      | combine(authentik_env_vars, recursive=True) }}
-    secrets: >-
-      {{ authentik_container_secrets_base
-      + authentik_container_secrets }}
+    env: "{{ authentik_container_env_combined }}"
+    secrets: "{{ authentik_container_secrets_combined }}"
     volumes:
       - "{{ authentik_volume_media }}.volume:/media"
       - "{{ authentik_volume_templates }}.volume:/templates"
     publish: "{{ authentik_traefik_enable | ternary(omit, authentik_ports) }}"
     command: server
-    labels: "{{ authentik_container_labels_base | combine(authentik_container_labels, recursive=True) }}"
+    labels: "{{ authentik_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ authentik_quadlet_options_base + authentik_quadlet_options }}"
+    quadlet_options: "{{ authentik_quadlet_options_combined }}"
     state: quadlet
   notify: Restart server for {{ authentik_name }}
   become: true
@@ -105,21 +95,16 @@
     name: "{{ authentik_name }}-worker"
     image: "{{ authentik_image }}:{{ authentik_image_tag }}"
     network: "{{ authentik_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(authentik_env_vars_base, recursive=True)
-      | combine(authentik_env_vars, recursive=True) }}
-    secrets: >-
-      {{ authentik_worker_container_secrets_base
-      + authentik_worker_container_secrets }}
+    env: "{{ authentik_container_env_combined }}"
+    secrets: "{{ authentik_worker_container_secrets_combined }}"
     volumes:
       - "{{ authentik_volume_media }}.volume:/media"
       - "{{ authentik_volume_certs }}.volume:/certs"
       - "{{ authentik_volume_templates }}.volume:/templates"
     command: worker
-    labels: "{{ authentik_worker_container_labels_base | combine(authentik_worker_container_labels, recursive=True) }}"
+    labels: "{{ authentik_worker_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ authentik_quadlet_options_base + authentik_quadlet_options }}"
+    quadlet_options: "{{ authentik_quadlet_options_combined }}"
     state: quadlet
   notify: Restart worker for {{ authentik_name }}
   become: true
