--- a/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/tasks/main.yml
@@ -55,18 +55,13 @@
     name: "{{ bar_assistant_name }}-redis"
     image: "{{ bar_assistant_redis_image }}:{{ bar_assistant_redis_image_tag }}"
     network: "{{ bar_assistant_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(bar_assistant_redis_env_vars_base, recursive=True)
-      | combine(bar_assistant_redis_env_vars, recursive=True) }}
-    secrets: >-
-      {{ bar_assistant_redis_container_secrets_base
-      + bar_assistant_redis_container_secrets }}
+    env: "{{ bar_assistant_redis_container_env_combined }}"
+    secrets: "{{ bar_assistant_redis_container_secrets_combined }}"
     volumes:
       - "{{ bar_assistant_redis_volume_data }}.volume:/data"
-    labels: "{{ bar_assistant_redis_container_labels_base | combine(bar_assistant_redis_container_labels, recursive=True) }}"
+    labels: "{{ bar_assistant_redis_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ bar_assistant_redis_quadlet_options_base + bar_assistant_redis_quadlet_options }}"
+    quadlet_options: "{{ bar_assistant_redis_quadlet_options_combined }}"
     state: quadlet
   notify: Restart redis for {{ bar_assistant_name }}
   become: true
@@ -78,19 +73,14 @@
     network:
       - "{{ bar_assistant_name }}.network"
       - "{{ bar_assistant_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
-    env: >-
-      {{ common_env_vars_base
-      | combine(bar_assistant_meilisearch_env_vars_base, recursive=True)
-      | combine(bar_assistant_meilisearch_env_vars, recursive=True) }}
-    secrets: >-
-      {{ bar_assistant_meilisearch_container_secrets_base
-      + bar_assistant_meilisearch_container_secrets }}
+    env: "{{ bar_assistant_meilisearch_container_env_combined }}"
+    secrets: "{{ bar_assistant_meilisearch_container_secrets_combined }}"
     volumes:
       - "{{ bar_assistant_meilisearch_volume_data }}.volume:/meili_data"
     publish: "{{ bar_assistant_traefik_enable | ternary(omit, bar_assistant_meilisearch_ports) }}"
-    labels: "{{ bar_assistant_meilisearch_container_labels_base | combine(bar_assistant_meilisearch_container_labels, recursive=True) }}"
+    labels: "{{ bar_assistant_meilisearch_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ bar_assistant_meilisearch_quadlet_options_base + bar_assistant_meilisearch_quadlet_options }}"
+    quadlet_options: "{{ bar_assistant_meilisearch_quadlet_options_combined }}"
     state: quadlet
   notify: Restart meilisearch for {{ bar_assistant_name }}
   become: true
@@ -102,19 +92,14 @@
     network:
       - "{{ bar_assistant_name }}.network"
       - "{{ bar_assistant_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
-    env: >-
-      {{ common_env_vars_base
-      | combine(bar_assistant_env_vars_base, recursive=True)
-      | combine(bar_assistant_env_vars, recursive=True) }}
-    secrets: >-
-      {{ bar_assistant_container_secrets_base
-      + bar_assistant_container_secrets }}
+    env: "{{ bar_assistant_container_env_combined }}"
+    secrets: "{{ bar_assistant_container_secrets_combined }}"
     volumes:
       - "{{ bar_assistant_volume_data }}.volume:/var/www/cocktails/storage/bar-assistant"
     publish: "{{ bar_assistant_traefik_enable | ternary(omit, bar_assistant_ports) }}"
-    labels: "{{ bar_assistant_container_labels_base | combine(bar_assistant_container_labels, recursive=True) }}"
+    labels: "{{ bar_assistant_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ bar_assistant_quadlet_options_base + bar_assistant_quadlet_options }}"
+    quadlet_options: "{{ bar_assistant_quadlet_options_combined }}"
     state: quadlet
   notify: Restart {{ bar_assistant_name }}
   become: true
@@ -126,17 +111,12 @@
     network:
       - "{{ bar_assistant_name }}.network"
       - "{{ bar_assistant_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
-    env: >-
-      {{ common_env_vars_base
-      | combine(bar_assistant_salt_rim_env_vars_base, recursive=True)
-      | combine(bar_assistant_salt_rim_env_vars, recursive=True) }}
-    secrets: >-
-      {{ bar_assistant_salt_rim_container_secrets_base
-      + bar_assistant_salt_rim_container_secrets }}
+    env: "{{ bar_assistant_salt_rim_container_env_combined }}"
+    secrets: "{{ bar_assistant_salt_rim_container_secrets_combined }}"
     publish: "{{ bar_assistant_traefik_enable | ternary(omit, bar_assistant_salt_rim_ports) }}"
-    labels: "{{ bar_assistant_salt_rim_container_labels_base | combine(bar_assistant_salt_rim_container_labels, recursive=True) }}"
+    labels: "{{ bar_assistant_salt_rim_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ bar_assistant_salt_rim_quadlet_options_base + bar_assistant_salt_rim_quadlet_options }}"
+    quadlet_options: "{{ bar_assistant_salt_rim_quadlet_options_combined }}"
     state: quadlet
   notify: Restart salt_rim for {{ bar_assistant_name }}
   become: true
