--- a/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/tasks/main.yml
@@ -45,20 +45,15 @@
     name: "{{ calibre_name }}"
     image: "{{ calibre_image }}:{{ calibre_image_tag }}"
     network: "{{ calibre_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(calibre_env_vars_base, recursive=True)
-      | combine(calibre_env_vars, recursive=True) }}
-    secrets: >-
-      {{ calibre_container_secrets_base
-      + calibre_container_secrets }}
+    env: "{{ calibre_container_env_combined }}"
+    secrets: "{{ calibre_container_secrets_combined }}"
     volumes:
       - "{{ calibre_volume_config }}:/config"
       - "{{ calibre_volume_media }}:/mnt/media"
     publish: "{{ calibre_traefik_enable | ternary(omit, calibre_ports) }}"
-    labels: "{{ calibre_container_labels_base | combine(calibre_container_labels, recursive=True) }}"
+    labels: "{{ calibre_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ calibre_quadlet_options_base + calibre_quadlet_options }}"
+    quadlet_options: "{{ calibre_quadlet_options_combined }}"
     state: quadlet
   notify: Restart {{ calibre_name }}
   become: true
