--- a/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/vars/main.yml
@@ -2,10 +2,15 @@
 # vars file for jaredhocutt.homelab.calibre
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-calibre_env_vars_base: {}
+calibre_container_env_base: {}
+
+calibre_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(calibre_container_env_base, recursive=True)
+  | combine(calibre_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -18,6 +23,10 @@ calibre_secrets_combined: >-
   | combine(calibre_secrets, recursive=True) }}
 
 calibre_container_secrets_base: []
+
+calibre_container_secrets_combined: >-
+  {{ calibre_container_secrets_base
+  + calibre_container_secrets }}
 
 ###############################################################################
 # Container Labels
@@ -33,8 +42,16 @@ calibre_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
 calibre_container_labels_base: "{{ calibre_traefik_enable | ternary((calibre_container_labels_traefik | items2dict), {}) }}"
 
+calibre_container_labels_combined: >-
+  {{ calibre_container_labels_base
+  | combine(calibre_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
 calibre_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+calibre_quadlet_options_combined: >-
+  {{ calibre_quadlet_options_base
+  + calibre_quadlet_options }}
