--- a/collections/ansible_collections/jaredhocutt/homelab/roles/karakeep/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/karakeep/tasks/main.yml
@@ -49,13 +49,8 @@
     name: "{{ karakeep_name }}-chrome"
     image: "{{ karakeep_chrome_image }}:{{ karakeep_chrome_image_tag }}"
     network: "{{ karakeep_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(karakeep_chrome_env_vars_base, recursive=True)
-      | combine(karakeep_chrome_env_vars, recursive=True) }}
-    secrets: >-
-      {{ karakeep_chrome_container_secrets_base
-      + karakeep_chrome_container_secrets }}
+    env: "{{ karakeep_chrome_container_env_combined }}"
+    secrets: "{{ karakeep_chrome_container_secrets_combined }}"
     command:
       - --no-sandbox
       - --disable-gpu
@@ -63,9 +58,9 @@
       - --remote-debugging-address=0.0.0.0
       - --remote-debugging-port=9222
       - --hide-scrollbars
-    labels: "{{ karakeep_chrome_container_labels_base | combine(karakeep_chrome_container_labels, recursive=True) }}"
+    labels: "{{ karakeep_chrome_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ karakeep_chrome_quadlet_options_base + karakeep_chrome_quadlet_options }}"
+    quadlet_options: "{{ karakeep_chrome_quadlet_options_combined }}"
     state: quadlet
   notify: Restart chrome for {{ karakeep_name }}
   become: true
@@ -75,18 +70,13 @@
     name: "{{ karakeep_name }}-meilisearch"
     image: "{{ karakeep_meilisearch_image }}:{{ karakeep_meilisearch_image_tag }}"
     network: "{{ karakeep_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(karakeep_meilisearch_env_vars_base, recursive=True)
-      | combine(karakeep_meilisearch_env_vars, recursive=True) }}
-    secrets: >-
-      {{ karakeep_meilisearch_container_secrets_base
-      + karakeep_meilisearch_container_secrets }}
+    env: "{{ karakeep_meilisearch_container_env_combined }}"
+    secrets: "{{ karakeep_meilisearch_container_secrets_combined }}"
     volumes:
       - "{{ karakeep_meilisearch_volume_data }}.volume:/meili_data"
-    labels: "{{ karakeep_meilisearch_container_labels_base | combine(karakeep_meilisearch_container_labels, recursive=True) }}"
+    labels: "{{ karakeep_meilisearch_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ karakeep_meilisearch_quadlet_options_base + karakeep_meilisearch_quadlet_options }}"
+    quadlet_options: "{{ karakeep_meilisearch_quadlet_options_combined }}"
     state: quadlet
   notify: Restart meilisearch for {{ karakeep_name }}
   become: true
@@ -96,19 +86,14 @@
     name: "{{ karakeep_name }}"
     image: "{{ karakeep_image }}:{{ karakeep_image_tag }}"
     network: "{{ karakeep_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(karakeep_env_vars_base, recursive=True)
-      | combine(karakeep_env_vars, recursive=True) }}
-    secrets: >-
-      {{ karakeep_container_secrets_base
-      + karakeep_container_secrets }}
+    env: "{{ karakeep_container_env_combined }}"
+    secrets: "{{ karakeep_container_secrets_combined }}"
     volumes:
       - "{{ karakeep_volume_data }}.volume:/data"
     publish: "{{ karakeep_traefik_enable | ternary(omit, karakeep_ports) }}"
-    labels: "{{ karakeep_container_labels_base | combine(karakeep_container_labels, recursive=True) }}"
+    labels: "{{ karakeep_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ karakeep_quadlet_options_base + karakeep_quadlet_options }}"
+    quadlet_options: "{{ karakeep_quadlet_options_combined }}"
     state: quadlet
   notify: Restart {{ karakeep_name }}
   become: true
