--- a/collections/ansible_collections/jaredhocutt/homelab/roles/karakeep/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/karakeep/vars/main.yml
@@ -2,19 +2,32 @@
 # vars file for jaredhocutt.homelab.karakeep
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-karakeep_env_vars_base:
+karakeep_container_env_base:
   MEILI_ADDR: http://{{ karakeep_name }}-meilisearch:7700
   BROWSER_WEB_URL: http://{{ karakeep_name }}-chrome:9222
   DATA_DIR: /data
   NEXTAUTH_URL: "{{ karakeep_nextauth_url }}"
 
-karakeep_chrome_env_vars_base: {}
+karakeep_chrome_container_env_base: {}
 
-karakeep_meilisearch_env_vars_base:
+karakeep_meilisearch_container_env_base:
   MEILI_NO_ANALYTICS: "true"
+
+karakeep_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(karakeep_container_env_base, recursive=True)
+  | combine(karakeep_container_env, recursive=True) }}
+karakeep_chrome_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(karakeep_chrome_container_env_base, recursive=True)
+  | combine(karakeep_chrome_container_env, recursive=True) }}
+karakeep_meilisearch_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(karakeep_meilisearch_container_env_base, recursive=True)
+  | combine(karakeep_meilisearch_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -38,6 +51,16 @@ karakeep_meilisearch_container_secrets_base:
   - karakeep_meilisearch_master_key,type=env,target=MEILI_MASTER_KEY
   - karakeep_nextauth_secret,type=env,target=NEXTAUTH_SECRET
 
+karakeep_container_secrets_combined: >-
+  {{ karakeep_container_secrets_base
+  + karakeep_container_secrets }}
+karakeep_chrome_container_secrets_combined: >-
+  {{ karakeep_chrome_container_secrets_base
+  + karakeep_chrome_container_secrets }}
+karakeep_meilisearch_container_secrets_combined: >-
+  {{ karakeep_meilisearch_container_secrets_base
+  + karakeep_meilisearch_container_secrets }}
+
 ###############################################################################
 # Container Labels
 ###############################################################################
@@ -56,6 +79,16 @@ karakeep_chrome_container_labels_base: {}
 
 karakeep_meilisearch_container_labels_base: {}
 
+karakeep_container_labels_combined: >-
+  {{ karakeep_container_labels_base
+  | combine(karakeep_container_labels, recursive=True) }}
+karakeep_chrome_container_labels_combined: >-
+  {{ karakeep_chrome_container_labels_base
+  | combine(karakeep_chrome_container_labels, recursive=True) }}
+karakeep_meilisearch_container_labels_combined: >-
+  {{ karakeep_meilisearch_container_labels_base
+  | combine(karakeep_meilisearch_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
@@ -72,3 +105,13 @@ karakeep_quadlet_options_base: "{{ common_quadlet_options_base + karakeep_quadle
 karakeep_chrome_quadlet_options_base: "{{ common_quadlet_options_base }}"
 
 karakeep_meilisearch_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+karakeep_quadlet_options_combined: >-
+  {{ karakeep_quadlet_options_base
+  + karakeep_quadlet_options }}
+karakeep_chrome_quadlet_options_combined: >-
+  {{ karakeep_chrome_quadlet_options_base
+  + karakeep_chrome_quadlet_options }}
+karakeep_meilisearch_quadlet_options_combined: >-
+  {{ karakeep_meilisearch_quadlet_options_base
+  + karakeep_meilisearch_quadlet_options }}
