--- a/collections/ansible_collections/jaredhocutt/homelab/roles/n8n/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/n8n/tasks/main.yml
@@ -53,13 +53,8 @@
     name: "{{ n8n_name }}-postgres"
     image: "{{ n8n_postgres_image }}:{{ n8n_postgres_image_tag }}"
     network: "{{ n8n_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(n8n_postgres_env_vars_base, recursive=True)
-      | combine(n8n_postgres_env_vars, recursive=True) }}
-    secrets: >-
-      {{ n8n_postgres_container_secrets_base
-      + n8n_postgres_container_secrets }}
+    env: "{{ n8n_postgres_container_env_combined }}"
+    secrets: "{{ n8n_postgres_container_secrets_combined }}"
     volumes:
       - "{{ n8n_postgres_volume_data }}.volume:/var/lib/postgresql/data"
     healthcheck_interval: 30s
@@ -67,9 +62,9 @@
     healthcheck_start_period: 20s
     healthcheck_timeout: 5s
     healthcheck: CMD-SHELL pg_isready -d {{ n8n_postgres_db_name }} -U {{ n8n_postgres_user }}
-    labels: "{{ n8n_postgres_container_labels_base | combine(n8n_postgres_container_labels, recursive=True) }}"
+    labels: "{{ n8n_postgres_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ n8n_postgres_quadlet_options_base + n8n_postgres_quadlet_options }}"
+    quadlet_options: "{{ n8n_postgres_quadlet_options_combined }}"
     state: quadlet
   notify: Restart postgres for {{ n8n_name }}
   become: true
@@ -79,22 +74,17 @@
     name: "{{ n8n_name }}-redis"
     image: "{{ n8n_redis_image }}:{{ n8n_redis_image_tag }}"
     network: "{{ n8n_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(n8n_redis_env_vars_base, recursive=True)
-      | combine(n8n_redis_env_vars, recursive=True) }}
-    secrets: >-
-      {{ n8n_redis_container_secrets_base
-      + n8n_redis_container_secrets }}
+    env: "{{ n8n_redis_container_env_combined }}"
+    secrets: "{{ n8n_redis_container_secrets_combined }}"
     volumes:
       - "{{ n8n_redis_volume_data }}.volume:/data"
     healthcheck_interval: 5s
     healthcheck_retries: 10
     healthcheck_timeout: 5s
     healthcheck: CMD-SHELL redis-cli ping
-    labels: "{{ n8n_redis_container_labels_base | combine(n8n_redis_container_labels, recursive=True) }}"
+    labels: "{{ n8n_redis_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ n8n_redis_quadlet_options_base + n8n_redis_quadlet_options }}"
+    quadlet_options: "{{ n8n_redis_quadlet_options_combined }}"
     state: quadlet
   notify: Restart redis for {{ n8n_name }}
   become: true
@@ -106,19 +96,14 @@
     network:
       - "{{ n8n_name }}.network"
       - "{{ n8n_traefik_enable | ternary(common_traefik_network ~ '.network', omit) }}"
-    env: >-
-      {{ common_env_vars_base
-      | combine(n8n_env_vars_base, recursive=True)
-      | combine(n8n_env_vars, recursive=True) }}
-    secrets: >-
-      {{ n8n_container_secrets_base
-      + n8n_container_secrets }}
+    env: "{{ n8n_container_env_combined }}"
+    secrets: "{{ n8n_container_secrets_combined }}"
     volumes:
       - "{{ n8n_volume_data }}.volume:/home/node/.n8n"
     publish: "{{ n8n_traefik_enable | ternary(omit, n8n_ports) }}"
-    labels: "{{ n8n_container_labels_base | combine(n8n_container_labels, recursive=True) }}"
+    labels: "{{ n8n_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ n8n_quadlet_options_base + n8n_quadlet_options }}"
+    quadlet_options: "{{ n8n_quadlet_options_combined }}"
     state: quadlet
   notify: Restart {{ n8n_name }}
   become: true
@@ -128,19 +113,14 @@
     name: "{{ n8n_name }}-worker"
     image: "{{ n8n_image }}:{{ n8n_image_tag }}"
     network: "{{ n8n_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(n8n_worker_env_vars_base, recursive=True)
-      | combine(n8n_worker_env_vars, recursive=True) }}
-    secrets: >-
-      {{ n8n_worker_container_secrets_base
-      + n8n_worker_container_secrets }}
+    env: "{{ n8n_worker_container_env_combined }}"
+    secrets: "{{ n8n_worker_container_secrets_combined }}"
     volumes:
       - "{{ n8n_volume_data }}.volume:/home/node/.n8n"
     command: worker
-    labels: "{{ n8n_worker_container_labels_base | combine(n8n_worker_container_labels, recursive=True) }}"
+    labels: "{{ n8n_worker_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ n8n_worker_quadlet_options_base + n8n_worker_quadlet_options }}"
+    quadlet_options: "{{ n8n_worker_quadlet_options_combined }}"
     state: quadlet
   notify: Restart worker for {{ n8n_name }}
   become: true
