--- a/collections/ansible_collections/jaredhocutt/homelab/roles/open_webui/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/open_webui/defaults/main.yml
@@ -15,7 +15,7 @@ open_webui_ports:
 
 open_webui_secrets: {}
 
-open_webui_env_vars: {}
+open_webui_container_env: {}
 open_webui_container_secrets: []
 open_webui_container_labels: {}
 open_webui_quadlet_options: []
