--- a/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/defaults/main.yml
@@ -15,7 +15,7 @@ overseerr_ports:
 
 overseerr_secrets: {}
 
-overseerr_env_vars: {}
+overseerr_container_env: {}
 overseerr_container_secrets: []
 overseerr_container_labels: {}
 overseerr_quadlet_options: []
