--- a/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/tasks/main.yml
@@ -43,19 +43,14 @@
     name: "{{ overseerr_name }}"
     image: "{{ overseerr_image }}:{{ overseerr_image_tag }}"
     network: "{{ overseerr_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(overseerr_env_vars_base, recursive=True)
-      | combine(overseerr_env_vars, recursive=True) }}
-    secrets: >-
-      {{ overseerr_container_secrets_base
-      + overseerr_container_secrets }}
+    env: "{{ overseerr_container_env_combined }}"
+    secrets: "{{ overseerr_container_secrets_combined }}"
     volumes:
       - "{{ overseerr_volume_config }}://app/config"
     publish: "{{ overseerr_traefik_enable | ternary(omit, overseerr_ports) }}"
-    labels: "{{ overseerr_container_labels_base | combine(overseerr_container_labels, recursive=True) }}"
+    labels: "{{ overseerr_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ overseerr_quadlet_options_base + overseerr_quadlet_options }}"
+    quadlet_options: "{{ overseerr_quadlet_options_combined }}"
     state: quadlet
   notify: Restart {{ overseerr_name }}
   become: true
