--- a/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/vars/main.yml
@@ -2,10 +2,15 @@
 # vars file for jaredhocutt.homelab.overseerr
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-overseerr_env_vars_base: {}
+overseerr_container_env_base: {}
+
+overseerr_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(overseerr_container_env_base, recursive=True)
+  | combine(overseerr_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -18,6 +23,10 @@ overseerr_secrets_combined: >-
   | combine(overseerr_secrets, recursive=True) }}
 
 overseerr_container_secrets_base: []
+
+overseerr_container_secrets_combined: >-
+  {{ overseerr_container_secrets_base
+  + overseerr_container_secrets }}
 
 ###############################################################################
 # Container Labels
@@ -33,8 +42,16 @@ overseerr_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
 overseerr_container_labels_base: "{{ overseerr_traefik_enable | ternary((overseerr_container_labels_traefik | items2dict), {}) }}"
 
+overseerr_container_labels_combined: >-
+  {{ overseerr_container_labels_base
+  | combine(overseerr_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
 overseerr_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+overseerr_quadlet_options_combined: >-
+  {{ overseerr_quadlet_options_base
+  + overseerr_quadlet_options }}
