--- a/collections/ansible_collections/jaredhocutt/homelab/roles/prowlarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/prowlarr/vars/main.yml
@@ -2,10 +2,15 @@
 # vars file for jaredhocutt.homelab.prowlarr
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-prowlarr_env_vars_base: {}
+prowlarr_container_env_base: {}
+
+prowlarr_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(prowlarr_container_env_base, recursive=True)
+  | combine(prowlarr_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -18,6 +23,10 @@ prowlarr_secrets_combined: >-
   | combine(prowlarr_secrets, recursive=True) }}
 
 prowlarr_container_secrets_base: []
+
+prowlarr_container_secrets_combined: >-
+  {{ prowlarr_container_secrets_base
+  + prowlarr_container_secrets }}
 
 ###############################################################################
 # Container Labels
@@ -33,8 +42,16 @@ prowlarr_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
 prowlarr_container_labels_base: "{{ prowlarr_traefik_enable | ternary((prowlarr_container_labels_traefik | items2dict), {}) }}"
 
+prowlarr_container_labels_combined: >-
+  {{ prowlarr_container_labels_base
+  | combine(prowlarr_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
 prowlarr_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+prowlarr_quadlet_options_combined: >-
+  {{ prowlarr_quadlet_options_base
+  + prowlarr_quadlet_options }}
