--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sabnzbd/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sabnzbd/vars/main.yml
@@ -2,10 +2,15 @@
 # vars file for jaredhocutt.homelab.sabnzbd
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-sabnzbd_env_vars_base: {}
+sabnzbd_container_env_base: {}
+
+sabnzbd_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(sabnzbd_container_env_base, recursive=True)
+  | combine(sabnzbd_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -18,6 +23,10 @@ sabnzbd_secrets_combined: >-
   | combine(sabnzbd_secrets, recursive=True) }}
 
 sabnzbd_container_secrets_base: []
+
+sabnzbd_container_secrets_combined: >-
+  {{ sabnzbd_container_secrets_base
+  + sabnzbd_container_secrets }}
 
 ###############################################################################
 # Container Labels
@@ -33,8 +42,16 @@ sabnzbd_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
 sabnzbd_container_labels_base: "{{ sabnzbd_traefik_enable | ternary((sabnzbd_container_labels_traefik | items2dict), {}) }}"
 
+sabnzbd_container_labels_combined: >-
+  {{ sabnzbd_container_labels_base
+  | combine(sabnzbd_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
 sabnzbd_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+sabnzbd_quadlet_options_combined: >-
+  {{ sabnzbd_quadlet_options_base
+  + sabnzbd_quadlet_options }}
