--- a/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/tasks/main.yml
@@ -51,13 +51,8 @@
     name: "{{ stirling_pdf_name }}"
     image: "{{ stirling_pdf_image }}:{{ stirling_pdf_image_tag }}"
     network: "{{ stirling_pdf_name }}.network"
-    env: >-
-      {{ common_env_vars_base
-      | combine(stirling_pdf_env_vars_base, recursive=True)
-      | combine(stirling_pdf_env_vars, recursive=True) }}
-    secrets: >-
-      {{ stirling_pdf_container_secrets_base
-      + stirling_pdf_container_secrets }}
+    env: "{{ stirling_pdf_container_env_combined }}"
+    secrets: "{{ stirling_pdf_container_secrets_combined }}"
     volumes:
       - "{{ stirling_pdf_volume_configs }}:/configs"
       - "{{ stirling_pdf_volume_training_data }}:/usr/share/tessdata"
@@ -65,9 +60,9 @@
       - "{{ stirling_pdf_volume_logs }}:/logs"
       - "{{ stirling_pdf_volume_pipeline }}:/pipeline"
     publish: "{{ stirling_pdf_traefik_enable | ternary(omit, stirling_pdf_ports) }}"
-    labels: "{{ stirling_pdf_container_labels_base | combine(stirling_pdf_container_labels, recursive=True) }}"
+    labels: "{{ stirling_pdf_container_labels_combined }}"
     quadlet_file_mode: "0600"
-    quadlet_options: "{{ stirling_pdf_quadlet_options_base + stirling_pdf_quadlet_options }}"
+    quadlet_options: "{{ stirling_pdf_quadlet_options_combined }}"
     state: quadlet
   notify: Restart {{ stirling_pdf_name }}
   become: true
