--- a/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/vars/main.yml
@@ -2,10 +2,15 @@
 # vars file for jaredhocutt.homelab.uptime_kuma
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-uptime_kuma_env_vars_base: {}
+uptime_kuma_container_env_base: {}
+
+uptime_kuma_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(uptime_kuma_container_env_base, recursive=True)
+  | combine(uptime_kuma_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -18,6 +23,10 @@ uptime_kuma_secrets_combined: >-
   | combine(uptime_kuma_secrets, recursive=True) }}
 
 uptime_kuma_container_secrets_base: []
+
+uptime_kuma_container_secrets_combined: >-
+  {{ uptime_kuma_container_secrets_base
+  + uptime_kuma_container_secrets }}
 
 ###############################################################################
 # Container Labels
@@ -33,8 +42,16 @@ uptime_kuma_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
 uptime_kuma_container_labels_base: "{{ uptime_kuma_traefik_enable | ternary((uptime_kuma_container_labels_traefik | items2dict), {}) }}"
 
+uptime_kuma_container_labels_combined: >-
+  {{ uptime_kuma_container_labels_base
+  | combine(uptime_kuma_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
 uptime_kuma_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+uptime_kuma_quadlet_options_combined: >-
+  {{ uptime_kuma_quadlet_options_base
+  + uptime_kuma_quadlet_options }}
