--- a/collections/ansible_collections/jaredhocutt/homelab/roles/vault/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/vault/vars/main.yml
@@ -5,10 +5,15 @@ vault_uid: 100
 vault_gid: 1000
 
 ###############################################################################
-# Envrionment Variables
+# Envrionment
 ###############################################################################
 
-vault_env_vars_base: {}
+vault_container_env_base: {}
+
+vault_container_env_combined: >-
+  {{ common_container_env_base
+  | combine(vault_container_env_base, recursive=True)
+  | combine(vault_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
@@ -21,6 +26,10 @@ vault_secrets_combined: >-
   | combine(vault_secrets, recursive=True) }}
 
 vault_container_secrets_base: []
+
+vault_container_secrets_combined: >-
+  {{ vault_container_secrets_base
+  + vault_container_secrets }}
 
 ###############################################################################
 # Container Labels
@@ -36,8 +45,16 @@ vault_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
 vault_container_labels_base: "{{ vault_traefik_enable | ternary((vault_container_labels_traefik | items2dict), {}) }}"
 
+vault_container_labels_combined: >-
+  {{ vault_container_labels_base
+  | combine(vault_container_labels, recursive=True) }}
+
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
 vault_quadlet_options_base: "{{ common_quadlet_options_base }}"
+
+vault_quadlet_options_combined: >-
+  {{ vault_quadlet_options_base
+  + vault_quadlet_options }}
